--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/all.js"></script>
 </head>
 
-<body style="overflow:-Scroll;overflow-y:hidden">
+<body>
     <header class="header bg-color">
 
         <a href="#" class="menu"></a>
