--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <ul class="global-nav mr-88 fs-20">
             <li>
-                <a href="">系列鏡框</a>
+                <a href="https://hkman2018.github.io/weekly4/">系列鏡框</a>
             </li>
             <li>
                 <a href="">門市據點</a>
