--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <h2 class="fs-48 mb-60 ta-center t-color ">經典系列鏡框</h2>
             <ul class="sort-items ">
                 <li class="optical d-flex mb-32 ">
-                    <div class="d-block">
-                        <img class="sort-img-w " src="./images/optical.png " alt=" ">
+                    <div class="d-block photo">
+                        <img class=" " src="./images/optical.png " alt=" ">
                     </div>
 
                     <h3 class="diamond ml-24 sort-text fs-48">
@@ -90,7 +90,7 @@
                     </h3>
                 </li>
                 <li class="sunglasses  mb-32 ">
-                    <div class="sunglass-img ml-24 d-block" href=" ">
+                    <div class="sunglass-img ml-24 d-block photo" href=" ">
                         <img class="sort-img-w " src="./images/sunglasses.png " alt=" ">
                     </div>
 
@@ -99,7 +99,7 @@
                     </h3>
                 </li>
                 <li class="flash-item d-flex mb-32 ">
-                    <div class="d-block" href=" ">
+                    <div class="d-block photo" href=" ">
                         <img class="sort-img-w " src="./images/functional.png " alt=" ">
                     </div>
 
@@ -171,7 +171,7 @@
 
             <ul class="client-item d-flex">
                 <li>
-                    <img src="./images/18.png" alt="">
+                    <img src="./images/18mo.png" alt="">
 
                     <div class="client">
                         <h4 class="mb-16 fs-16 en-text-med">Jessy</h4>
@@ -181,7 +181,7 @@
 
                 </li>
                 <li>
-                    <img src="./images/25.png" alt="">
+                    <img src="./images/25mo.png" alt="">
 
                     <div class="client">
                         <h4 class="mb-16 fs-16 en-text-med">Karen</h4>
@@ -191,7 +191,7 @@
 
                 </li>
                 <li>
-                    <img src="./images/36.png" alt="">
+                    <img src="./images/36mo.png" alt="">
 
                     <div class="client">
                         <h4 class="mb-16 fs-16 en-text-med">Chelsea</h4>
@@ -201,7 +201,7 @@
 
                 </li>
                 <li>
-                    <img src="./images/45.png" alt="">
+                    <img src="./images/45mo.png" alt="">
 
                     <div class="client">
                         <h4 class="mb-16 fs-16 en-text-med">Jane</h4>
@@ -219,20 +219,20 @@
                 <p class="fs-20 mb-20 zh-text-regular">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
                 <form action="">
                     <div class="form-input mb-16">
-                        <label class="fs-16 zh-text-regular" for="">姓名</label>
-                        <input class="en-text-regular" type="text" placeholder="陳小明">
+                        <label class="fs-16 zh-text-regular" for="nickname">姓名</label>
+                        <input class="en-text-regular" id="nickname" type="text" placeholder="陳小明">
                     </div>
                     <div class="form-input mb-16">
-                        <label class="fs-16 zh-text-regular" for="">聯絡電話</label>
-                        <input class="en-text-regular" type="phone" placeholder="0912-345-678">
+                        <label class="fs-16 zh-text-regular" for="tel">聯絡電話</label>
+                        <input class="en-text-regular" id="tel" type="phone" placeholder="0912-345-678">
                     </div>
                     <div class=" form-input mb-16 ">
-                        <label class="fs-16 zh-text-regular" for=" ">電子郵件</label>
-                        <input class="en-text-regular" type="email" placeholder="example@email.com">
+                        <label class="fs-16 zh-text-regular" for="email">電子郵件</label>
+                        <input class="en-text-regular" id="email" type="email" placeholder="example@email.com">
                     </div>
                     <div class="form-input mb-16 ">
-                        <label class="fs-16 zh-text-regular" for=" ">意見反應</label>
-                        <textarea class="en-text-regular" rows="6" cols="50" placeholder="請輸入您的意見"></textarea>
+                        <label class="fs-16 zh-text-regular" for="comment">意見反應</label>
+                        <textarea class="en-text-regular" id="comment" rows="6" cols="50" placeholder="請輸入您的意見"></textarea>
                     </div>
                     <div class="form-checkbox ">
                         <input type="checkbox" id="checkedBox">
